--- a/homework/HW4_MD_CityCrime.Rmd
+++ b/homework/HW4_MD_CityCrime.Rmd
@@ -9,6 +9,8 @@ In this assignment, we will be working with a dataset of total crimes reported b
 You will need to load the tidyverse library and the janitor library
 
 ```{r}
+library(tidyverse)
+library(janitor)
 ```
 
 Then you'll load the data from the web. The URL for the data is: https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/md_cities_crime_2019_2020.csv. You will create a dataframe called `md_cities` that contains the data from this URL.
@@ -16,39 +18,43 @@ Then you'll load the data from the web. The URL for the data is: https://raw.git
 ### Task 2: Load the Data
 
 ```{r}
+md_cities <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/md_cities_crime_2019_2020.csv")
 ```
 ### Task 3: Calculating Rates
 
 Calculate violent and property crime rates for each city for both years using `mutate()`. You'll create four new columns: `violent_rate_2019`, `property_rate_2019`, `violent_rate_2020`, and `property_rate_2020`. You'll need to figure out the proper unit rate, given that there are varying populations. There's no perfect choice; choose the one that works best for you. Save the results to a new dataframe called `md_cities_rates`.
 
 ```{r}
+md_cities_rates = md_cities |> mutate(violent_rate_2019 = violent2019/pop2019 * 100, property_rate_2019 = property2019/pop2019 * 100, violent_rate_2020 = violent2020/pop2020 * 100, property_rate_2020 = property2020/pop2020 * 100)
 ```
 
 ### Task 4: Describe the Rates
 
 Examine the new dataframe, `md_cities_rates`, by clicking on it in the Environment tab in RStudio and sorting by the rate columns. Write a couple of sentences about the results, comparing and contrasting the cities with the highest rates (both violent and property) in 2019 and 2020. Do you see any patterns? What does this tell you about crime in Maryland cities? What's the story here?
 
-ANSWER HERE
-
+The cities I noticed with the highest rates of violence in 2019 were Elkton, Ocean City, Baltimore and Williamsport which all had a rate of over 1.0. The cities with the highest property rates in 2019 were Ocean City with a rate of 10, Oakland with a rate of 7 and Hyattsville with a rate of 6. In 2020, the cities with the highest violence rate were Ocean City with a rate of 2 and Baltimore, Cambridge, Williamsport, Princess Anne and  Kitzmiller which all had rates about 1. The cities with the highest property rates in 2020 were Ocean City with a rate of 12, Oakland and Landover Hills and Colmar Manor with a rate of 5 and Princess Anne, Hyattsville, Cambridge and Edmonston with rates of 4. I saw that in Ocean City property crimes especially increased through the year. However, I noticed that overall property crime rates decreased as the highest numbers were 4s and 5s whereas the previous year it was 7s and 6s. I noticed that trends for violent crime rates stayed relatively around the same numbers between the two years. The story here could specifically be an investigation into why Ocean City was always in the highest rates for each category each year. I think it would be interesting to look into why Ocean City specifically struggles so much more than other cities, especially bigger cities like Baltimore. 
 
 ### Task 5: Calculate Percentage Change
 
 Let's add two percentage change columns to your dataframe: one for violent crime rates and one for property crime rates. You'll calculate the percentage change between 2019 and 2020 for each city. Save the results to a new dataframe called `md_cities_change`.
 
 ```{r}
+md_cities_change = md_cities_rates |> mutate(viole_crime_percent_change = (violent_rate_2020 - violent_rate_2019)/violent_rate_2019 *100, property_crime_percent_change = (property_rate_2020 - property_rate_2019)/property_rate_2019 * 100)
 ```
 
 ### Task 7: Describe Percentage Changes
 
 Look at the `md_cities_change` dataframe by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the percentage change results. What's more interesting here, the patterns or the outliers? What's the story in the data?
 
-ANSWER HERE
+I think the most interesting parts of the data were the results that were listed as Na. I think it was very interesting that some of the cities could not have data calculated for them becuase of the differences in the rates. I expected all cities to have data for the percent change so seeing that surprised me. Another part that surprised me was that there were some cities that had such high percent changes. In Edmonston the percent change for violent crimes increased by 845%. For property crimes, the percent change decreased for a majority of cities, however in Cecilton it increased by 199%. I think the story in this data is to look into some of the cities to see if the drastically large percent changes are actually due to a large increase in crimes or if it because the cities are changing from having basically no crime to a little crime. The percent changes could make it appear that the amount of crime increased a lot despite the numbers not having actually changed as much. 
 
 ### Task 8: Tell the Best Story
 
 Write up a lede and nutgraf of a story with the _best_ story idea you've found in this assignment. The lede should be a single sentence that summarizes the most important information in the data. The nutgraf should be a paragraph that provides more context and explains why the data is important.
 
-ANSWER HERE
+Lede: High crime rates in Ocean City raise questions about why this city struggles to remain safe. 
+
+Nutgraph: After looking at the rates of crime between the two years, I noticed that Ocean City had significantly higher numbers than the other cities. In 2019, their violent crime rate increased from 1.3 to 2.4 in the one year, and their property crime rate increased from 10.4 to 12.1. Comparatively, larger cities like Baltimore did not see as much of an increase which made me wonder why a busier place like Baltimore could remain safer than a smaller ocean town. I think it would be very interesting to look more into why Ocean City specifically struggles and why their numbers for crime rates are so much higher, specifically for property crime rates. I think looking into this could potentially help the city find new ways to remain safe and potentially result in the numbers leveling out with other cities. 
 
 ### Task 9: Save Your Work and Put it on GitHub
 
